# database_manager

./: main.py  pyproject.toml
database_manager/: __init__.py  database_manager.py
database_manager/contracts/: entity_model.py
database_manager/entities/: entity.py
