[project]
name = "database-manager"
version = "0.1.0"
description = "A Python database manager with PostgreSQL support"
readme = "README.md"
requires-python = ">=3.13"
authors = [
    {name = "Favour Chigoziri Akubuo", email = "akubuof.work@gmail.com"},
]
license = {file = "LICENSE"}
keywords = ["database", "postgresql", "sqlalchemy"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "psycopg>=3.2.9",
    "sqlalchemy>=2.0.43",
]

[project.urls]
Homepage = "https://github.com/Akubuo-F/database_manager"
Repository = "https://github.com/Akubuo-F/database_manager.git"
Issues = "https://github.com/Akubuo-F/database_manager/issues"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"